test/corpus/atom.txt
================================================================================
Atom - parameter
================================================================================

RETURN $1, $0, $named_parameter;

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (parameter
                          (decimal_integer)))))
                  (projection_item
                    (expression
                      (atom
                        (parameter
                          (decimal_integer)))))
                  (projection_item
                    (expression
                      (atom
                        (parameter
                          (identifier))))))))))))))

================================================================================
Atom - case expression - simple
================================================================================

RETURN CASE n.age
    WHEN 18 THEN 'adult'
    ELSE 'child'
END;

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (case_expression
                          (expression
                            (property_or_labels_expression
                              (expression
                                (atom
                                  (variable
                                    (identifier))))
                              (property_lookup
                                (identifier))))
                          (case_alternatives
                            (expression
                              (atom
                                (literal
                                  (number_literal
                                    (integer_literal
                                      (decimal_integer))))))
                            (expression
                              (atom
                                (literal
                                  (string_literal)))))
                          (expression
                            (atom
                              (literal
                                (string_literal)))))))))))))))))

================================================================================
Atom - case expression - generic
================================================================================

RETURN CASE
    WHEN predicate THEN result
END;

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (case_expression
                          (case_alternatives
                            (expression
                              (atom
                                (variable
                                  (identifier))))
                            (expression
                              (atom
                                (variable
                                  (identifier))))))))))))))))))

================================================================================
Atom - COUNT(*)
================================================================================

RETURN COUNT(*);

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (count_star)))))))))))))

================================================================================
Atom - list comprehension - 1
================================================================================

RETURN [ x IN [1, 2, 3, 4] | x + 2 ];

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (list_comprehension
                          (filter_expression
                            (id_in_coll
                              (variable
                                (identifier))
                              (expression
                                (atom
                                  (literal
                                    (list_literal
                                      (expression
                                        (atom
                                          (literal
                                            (number_literal
                                              (integer_literal
                                                (decimal_integer))))))
                                      (expression
                                        (atom
                                          (literal
                                            (number_literal
                                              (integer_literal
                                                (decimal_integer))))))
                                      (expression
                                        (atom
                                          (literal
                                            (number_literal
                                              (integer_literal
                                                (decimal_integer))))))
                                      (expression
                                        (atom
                                          (literal
                                            (number_literal
                                              (integer_literal
                                                (decimal_integer))))))))))))
                          (expression
                            (additive_expression
                              (expression
                                (atom
                                  (variable
                                    (identifier))))
                              (expression
                                (atom
                                  (literal
                                    (number_literal
                                      (integer_literal
                                        (decimal_integer)))))))))))))))))))))

================================================================================
Atom - list comprehension - 2
================================================================================

RETURN [ x IN [1, 2, 3, 4] WHERE x / 2 | x + 2 ];

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (list_comprehension
                          (filter_expression
                            (id_in_coll
                              (variable
                                (identifier))
                              (expression
                                (atom
                                  (literal
                                    (list_literal
                                      (expression
                                        (atom
                                          (literal
                                            (number_literal
                                              (integer_literal
                                                (decimal_integer))))))
                                      (expression
                                        (atom
                                          (literal
                                            (number_literal
                                              (integer_literal
                                                (decimal_integer))))))
                                      (expression
                                        (atom
                                          (literal
                                            (number_literal
                                              (integer_literal
                                                (decimal_integer))))))
                                      (expression
                                        (atom
                                          (literal
                                            (number_literal
                                              (integer_literal
                                                (decimal_integer)))))))))))
                            (where
                              (expression
                                (multiplicative_expression
                                  (expression
                                    (atom
                                      (variable
                                        (identifier))))
                                  (expression
                                    (atom
                                      (literal
                                        (number_literal
                                          (integer_literal
                                            (decimal_integer))))))))))
                          (expression
                            (additive_expression
                              (expression
                                (atom
                                  (variable
                                    (identifier))))
                              (expression
                                (atom
                                  (literal
                                    (number_literal
                                      (integer_literal
                                        (decimal_integer)))))))))))))))))))))

================================================================================
Atom - pattern comprehension - 1
================================================================================

RETURN [()-[r:ACTED_IN]->() WHERE r.year = 2022 | r.year - 2];

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (pattern_comprehension
                          (relationships_pattern
                            (node_pattern)
                            (pattern_element_chain
                              (relationship_pattern
                                (dash)
                                (relationship_detail
                                  (variable
                                    (identifier))
                                  (relationship_types
                                    (rel_type_name
                                      (identifier))))
                                (dash)
                                (right_arrow_head))
                              (node_pattern)))
                          (expression
                            (comparison_expression
                              (expression
                                (property_or_labels_expression
                                  (expression
                                    (atom
                                      (variable
                                        (identifier))))
                                  (property_lookup
                                    (identifier))))
                              (expression
                                (atom
                                  (literal
                                    (number_literal
                                      (integer_literal
                                        (decimal_integer))))))))
                          (expression
                            (additive_expression
                              (expression
                                (property_or_labels_expression
                                  (expression
                                    (atom
                                      (variable
                                        (identifier))))
                                  (property_lookup
                                    (identifier))))
                              (expression
                                (atom
                                  (literal
                                    (number_literal
                                      (integer_literal
                                        (decimal_integer)))))))))))))))))))))

================================================================================
Atom - pattern comprehension - 2
================================================================================

RETURN [r = ()-[r:ACTED_IN]->() WHERE r.year = 2022 | r.year - 2];

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (pattern_comprehension
                          (variable
                            (identifier))
                          (relationships_pattern
                            (node_pattern)
                            (pattern_element_chain
                              (relationship_pattern
                                (dash)
                                (relationship_detail
                                  (variable
                                    (identifier))
                                  (relationship_types
                                    (rel_type_name
                                      (identifier))))
                                (dash)
                                (right_arrow_head))
                              (node_pattern)))
                          (expression
                            (comparison_expression
                              (expression
                                (property_or_labels_expression
                                  (expression
                                    (atom
                                      (variable
                                        (identifier))))
                                  (property_lookup
                                    (identifier))))
                              (expression
                                (atom
                                  (literal
                                    (number_literal
                                      (integer_literal
                                        (decimal_integer))))))))
                          (expression
                            (additive_expression
                              (expression
                                (property_or_labels_expression
                                  (expression
                                    (atom
                                      (variable
                                        (identifier))))
                                  (property_lookup
                                    (identifier))))
                              (expression
                                (atom
                                  (literal
                                    (number_literal
                                      (integer_literal
                                        (decimal_integer)))))))))))))))))))))

================================================================================
Atom - ALL(filter_expression)
================================================================================

RETURN ALL ( n IN node.names );

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (quantifier
                          (filter_expression
                            (id_in_coll
                              (variable
                                (identifier))
                              (expression
                                (property_or_labels_expression
                                  (expression
                                    (atom
                                      (variable
                                        (identifier))))
                                  (property_lookup
                                    (identifier)))))))))))))))))))

================================================================================
Atom - ANY(filter_expression)
================================================================================

RETURN ANY ( n IN node.names );

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (quantifier
                          (filter_expression
                            (id_in_coll
                              (variable
                                (identifier))
                              (expression
                                (property_or_labels_expression
                                  (expression
                                    (atom
                                      (variable
                                        (identifier))))
                                  (property_lookup
                                    (identifier)))))))))))))))))))

================================================================================
Atom - NONE(filter_expression)
================================================================================

RETURN NONE ( n IN node.names );

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (quantifier
                          (filter_expression
                            (id_in_coll
                              (variable
                                (identifier))
                              (expression
                                (property_or_labels_expression
                                  (expression
                                    (atom
                                      (variable
                                        (identifier))))
                                  (property_lookup
                                    (identifier)))))))))))))))))))

================================================================================
Atom - SINGLE(filter_expression)
================================================================================

RETURN SINGLE ( n IN node.names );

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (quantifier
                          (filter_expression
                            (id_in_coll
                              (variable
                                (identifier))
                              (expression
                                (property_or_labels_expression
                                  (expression
                                    (atom
                                      (variable
                                        (identifier))))
                                  (property_lookup
                                    (identifier)))))))))))))))))))

================================================================================
Atom - relationships pattern
================================================================================

RETURN (n:ACTOR)-[r:ACTED_IN]->(:MOVIE)-[d:DIRECTED_BY]->(x:DIRECTOR);

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (pattern_predicate
                          (relationships_pattern
                            (node_pattern
                              (variable
                                (identifier))
                              (node_labels
                                (node_label
                                  (label_name
                                    (identifier)))))
                            (pattern_element_chain
                              (relationship_pattern
                                (dash)
                                (relationship_detail
                                  (variable
                                    (identifier))
                                  (relationship_types
                                    (rel_type_name
                                      (identifier))))
                                (dash)
                                (right_arrow_head))
                              (node_pattern
                                (node_labels
                                  (node_label
                                    (label_name
                                      (identifier))))))
                            (pattern_element_chain
                              (relationship_pattern
                                (dash)
                                (relationship_detail
                                  (variable
                                    (identifier))
                                  (relationship_types
                                    (rel_type_name
                                      (identifier))))
                                (dash)
                                (right_arrow_head))
                              (node_pattern
                                (variable
                                  (identifier))
                                (node_labels
                                  (node_label
                                    (label_name
                                      (identifier))))))))))))))))))))

================================================================================
Atom - parenthesized expression
================================================================================

RETURN (1);

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (parenthesized_expression
                          (expression
                            (atom
                              (literal
                                (number_literal
                                  (integer_literal
                                    (decimal_integer)))))))))))))))))))

================================================================================
Atom - function invocation
================================================================================

RETURN hocus_pocus(DISTINCT x, y, z);

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (function_invocation
                          (function_reference
                            (identifier))
                          (set_quantifier)
                          (expression
                            (atom
                              (variable
                                (identifier))))
                          (expression
                            (atom
                              (variable
                                (identifier))))
                          (expression
                            (atom
                              (variable
                                (identifier)))))))))))))))))

================================================================================
Atom - variable
================================================================================

RETURN hocus_pocus;

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (variable
                          (identifier))))))))))))))
